--- a/daily-games.html
+++ b/daily-games.html
@@ -348,22 +348,25 @@
               <!-- Cards navigation -->
               <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <a href="#tab-top-1" class="nav-link active" data-bs-toggle="tab">Geography & History</a>
+                  <a href="#tab-top-1" class="nav-link active" data-bs-toggle="tab">Favorites</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#tab-top-2" class="nav-link" data-bs-toggle="tab">Words</a>
+                  <a href="#tab-top-2" class="nav-link active" data-bs-toggle="tab">Geography & History</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#tab-top-3" class="nav-link" data-bs-toggle="tab">Numbers</a>
+                  <a href="#tab-top-3" class="nav-link" data-bs-toggle="tab">Words</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#tab-top-4" class="nav-link" data-bs-toggle="tab">Movies</a>
+                  <a href="#tab-top-4" class="nav-link" data-bs-toggle="tab">Numbers</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#tab-top-5" class="nav-link" data-bs-toggle="tab">Video Games</a>
+                  <a href="#tab-top-5" class="nav-link" data-bs-toggle="tab">Movies</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#tab-top-6" class="nav-link" data-bs-toggle="tab">Misc</a>
+                  <a href="#tab-top-6" class="nav-link" data-bs-toggle="tab">Video Games</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#tab-top-7" class="nav-link" data-bs-toggle="tab">Misc</a>
                 </li>
               </ul>
             <div class="tab-content">
@@ -371,6 +374,21 @@
               <div id="tab-top-1" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
+                  <p>Worldle <a href="https://worldle.teuteuf.fr/" target="_blank" class="pe-auto">https://worldle.teuteuf.fr/</a> Guess country based on shape</p>
+                  <p>Travle <a href="https://travle.earth/" target="_blank" class="pe-auto">https://travle.earth/</a> Connect two countries with adjacent countries</p>
+                  <p>Timeguessr <a href="https://timeguessr.com/" target="_blank" class="pe-auto">https://timeguessr.com/</a> Guess year and location of photo</p> 
+                  <p>Framed <a href="https://www.framed.wtf/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
+                  <p>Movie to Movie <a href="https://movietomovie.com/" target="_blank" class="pe-auto">https://movietomovie.com/</a></p>
+                  <p>Costcodle <a href="https://costcodle.com/" target="_blank" class="pe-auto">https://costcodle.com/</a></p>
+                  <p>Scrandle <a href="https://scrandle.com/" target="_blank" class="pe-auto">https://scrandle.com/</a></p>                  
+                </div>
+              </div>
+              
+              <!-- Content of card #2 -->
+              <div id="tab-top-2" class="card tab-pane active show">
+                <div class="card-body">
+                  <div class="card-title"></div>
+                  <p>Contexto <a href="https://contexto.me/" target="_blank" class="pe-auto">https://contexto.me/</a> Guess word based on how close other guesses are to actual word</p>
                   <p>Worldle <a href="https://worldle.teuteuf.fr/" target="_blank" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
                   <p>Travle <a href="https://travle.earth/" target="_blank" class="pe-auto">https://travle.earth/</a></p>
                   <p>Histordle | Yeardle <a href="https://histordle.com/yeardle/" target="_blank" class="pe-auto">https://histordle.com/yeardle/</a></p>
@@ -379,8 +397,8 @@
                   <p>Timeguessr <a href="https://timeguessr.com/roundonedaily" target="_blank" class="pe-auto">https://timeguessr.com/roundonedaily</a></p> 
                 </div>
               </div>
-              <!-- Content of card #2 -->
-              <div id="tab-top-2" class="card tab-pane">
+              <!-- Content of card #3 -->
+              <div id="tab-top-3" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" target="_blank" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
@@ -400,8 +418,8 @@
                   <p>Boggdle <a href="https://simenmh.com/boggdle/" target="_blank" class="pe-auto">https://simenmh.com/boggdle/</a></p>
                 </div>
               </div>
-              <!-- Content of card #3 -->
-              <div id="tab-top-3" class="card tab-pane">
+              <!-- Content of card #4 -->
+              <div id="tab-top-4" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>Hurdle <a href="https://hurdle.iancanderson.com/" target="_blank" class="pe-auto">https://hurdle.iancanderson.com/</a></p>
@@ -413,20 +431,22 @@
                 </div>
               </div>
               
-              <!-- Content of card #4 -->
-              <div id="tab-top-4" class="card tab-pane">
+              <!-- Content of card #5 -->
+              <div id="tab-top-5" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>Framed <a href="https://www.framed.wtf/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
                   <p>Cine 2 Nerdle <a href="https://www.cinenerdle2.app/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
-                  <p>Rotten Tomatoes Movie Trivia <a href="https://www.rottentomatoes.com/movie-trivia/" target="_blank" class="pe-auto">https://www.rottentomatoes.com/movie-trivia/</a></p>
+                  <!--  Discontinued :^(           
+                  <p>Rotten Tomatoes Movie Trivia <a href="https://www.rottentomatoes.com/movie-trivia/" target="_blank" class="pe-auto">https://www.rottentomatoes.com/movie-trivia/</a></p> 
+                  -->
                   <p>Movie to Movie <a href="https://movietomovie.com/" target="_blank" class="pe-auto">https://movietomovie.com/</a></p>
                   <p>Box Office Game <a href="https://boxofficega.me/" target="_blank" class="pe-auto">https://boxofficega.me/</a></p>
                   </div>
                 </div>
 
-              <!-- Content of card #5 -->
-              <div id="tab-top-5" class="card tab-pane">
+              <!-- Content of card #6 -->
+              <div id="tab-top-6" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
                     <p>Gamedle <a href="https://www.gamedle.wtf/?lang=en#" target="_blank" class="pe-auto">https://www.gamedle.wtf/?lang=en#</a></p>
@@ -438,8 +458,8 @@
                   </div>
                 </div>
 
-              <!-- Content of card #6 -->
-              <div id="tab-top-6" class="card tab-pane">
+              <!-- Content of card #7 -->
+              <div id="tab-top-7" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
                     <p>Daily Dozen Trivia <a href="https://dailydozentrivia.com/" target="_blank" class="pe-auto">https://dailydozentrivia.com/</a></p>
@@ -450,6 +470,7 @@
                     <p>Foodguessr <a href="https://www.foodguessr.com/daily" target="_blank" class="pe-auto">https://www.foodguessr.com/daily</a></p>
                     <p>Guess the Audio <a href="https://guesstheaudio.com/" target="_blank" class="pe-auto">https://guesstheaudio.com/</a></p>
                     <p>Guess the Book <a href="https://guessthebook.app/" target="_blank" class="pe-auto">https://guessthebook.app/</a></p>
+                    <p>Scrandle <a href="https://scrandle.com/" target="_blank" class="pe-auto">https://scrandle.com/</a></p>
                   </div>
                 </div>
               </div>
