--- a/daily-games.html
+++ b/daily-games.html
@@ -369,6 +369,7 @@
                   <a href="#tab-top-7" class="nav-link" data-bs-toggle="tab">Misc</a>
                 </li>
               </ul>
+              
             <div class="tab-content">
               <!-- Content of card #1 -->
               <div id="tab-top-1" class="card tab-pane active show">
@@ -398,7 +399,7 @@
                 </div>
               </div>
               <!-- Content of card #3 -->
-              <div id="tab-top-3" class="card tab-pane">
+              <div id="tab-top-3" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" target="_blank" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
@@ -419,7 +420,7 @@
                 </div>
               </div>
               <!-- Content of card #4 -->
-              <div id="tab-top-4" class="card tab-pane">
+              <div id="tab-top-4" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>Hurdle <a href="https://hurdle.iancanderson.com/" target="_blank" class="pe-auto">https://hurdle.iancanderson.com/</a></p>
@@ -432,7 +433,7 @@
               </div>
               
               <!-- Content of card #5 -->
-              <div id="tab-top-5" class="card tab-pane">
+              <div id="tab-top-5" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>Framed <a href="https://www.framed.wtf/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
@@ -446,7 +447,7 @@
                 </div>
 
               <!-- Content of card #6 -->
-              <div id="tab-top-6" class="card tab-pane">
+              <div id="tab-top-6" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
                     <p>Gamedle <a href="https://www.gamedle.wtf/?lang=en#" target="_blank" class="pe-auto">https://www.gamedle.wtf/?lang=en#</a></p>
@@ -459,7 +460,7 @@
                 </div>
 
               <!-- Content of card #7 -->
-              <div id="tab-top-7" class="card tab-pane">
+              <div id="tab-top-7" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
                     <p>Daily Dozen Trivia <a href="https://dailydozentrivia.com/" target="_blank" class="pe-auto">https://dailydozentrivia.com/</a></p>
