--- a/daily-games.html
+++ b/daily-games.html
@@ -340,7 +340,7 @@
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
-          The 'dles
+          <!--The 'dles-->
           <div class="row row-deck row-cards">
 
             <!-- Cards with tabs component -->
